<resources>
    <string name="app_name">E-Comm App</string>

    <string name="action_settings">Settings</string>
    <string name="empty_text">Select song from below to play</string>
    <string name="standard">Standard</string>
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="idle">Idle</string>
    <string name="crash_toast_text">Oops Crashe Occurred</string>
    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>
    <string name="checkout">CheckOut</string>
    <string name="similar_product">You may also like</string>
    <string name="slogan">Assignment</string>
    <string name="email_developer_">Email Developer:</string>
    <string name="personal_website_">Personal Website :</string>
    <string name="site_hitesh">www.hiteshsahu.com</string>
    <string name="contact_number">Contact Number</string>
    <string name="mob_num">8888813275</string>
    <string name="lab_locations">Locations</string>
    <string name="pune">Pune</string>
    <string name="address_value">C 1002, Lorelle Socity Wakad Pune</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Used in home Fragment(Aryan)-->
    <string name="instantdiscount">Instant food the you will love</string>
    <string name="readyfood">Ready to eat food</string>
    <string name="buttonTextview">View All</string>
    <string name="apple">Apples</string>

    <!--Used in DeliveryFragment -->
    <string name="promocode">Have a Promo Code?</string>
    <string name="hintpromo">Promo Code</string>
    <string name="orderSummary">Order Summary</string>
    <string name="productname">Product Name</string>
    <string name="quantity">Qty</string>
    <string name="price">Price</string>
    <string name="Subtotal">Subtotal</string>
    <string name="orderDetail">Brown Sheesham Wood and Brass Tissue Box</string>


    <string name="merchantID">5708075</string>
    <string name="merchantKey">FdDo1kq6</string>
    <string name="merchantSalt">z9aBCu7KqG</string>
    <string name="sUrl">https://test.payumoney.com/mobileapp/payumoney/success.php</string>
    <string name="fUrl">https://test.payumoney.com/mobileapp/payumoney/failure.php</string>

    <string name="facebook_app_id">251525493342210</string>
    <string name="fb_login_protocol_scheme">fb251525493342210</string>

    <string name="mapbox_access_token">sk.eyJ1IjoiYXJ5YW4tYmlzaHQiLCJhIjoiY2ttb2xsd2E4MGd6bTJwcnY2ZXI3aXAxdyJ9.BSTpHVujwNmutf0kCR8Sqg</string>


</resources>